<resources>
    <string name="app_name">Family Map</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="goto_login">Login/Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="server_host_title">Server Host:</string>
    <string name="server_port_title">Server Port:</string>
    <string name="username_title">Username:</string>
    <string name="password_title">Password:</string>
    <string name="first_name_title">First Name:</string>
    <string name="last_name_title">Last Name:</string>
    <string name="email_title">Email:</string>
    <string name="male_title">Male</string>
    <string name="female_title">Female</string>
    <string name="gender_title">Gender:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_server_host">10.0.2.2</string>
    <string name="default_server_port">8080</string>
    <string name="default_event_detail">Click on a marker to see event details</string>

    <string name="gender">Gender</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="event_group_title">Life Events</string>
    <string name="person_group_title">Family Members</string>
    <string name="person_activity_titlebar">Family Map: Person Details</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>